Fix for long lists of discussions/ideas/resources spilling out of the container div

--- a/pylowiki/public/styles/civ.css
+++ b/pylowiki/public/styles/civ.css
@@ -80,7 +80,7 @@ hr.civ-topbar-hr{
 }
 
 .list-item{
-   height:85px;
+   height:100px;
 }
 
 .list-item .list-item-text{
